default/objects/FieldSalesTerritory__c/FieldSalesTerritory__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>FieldSalesTerritory</label>
</CustomObject>