default/objects/FieldSalesTerritory__c/fields/GroupId__c.field-meta.xml
<CustomField>
    <fullName>GroupId__c</fullName>
    <label>GroupId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>