default/objects/FieldSalesTerritory__c/fields/numberRecordsPerPage__c.field-meta.xml
<CustomField>
    <fullName>numberRecordsPerPage__c</fullName>
    <label>numberRecordsPerPage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>