default/objects/FieldSalesTerritory__c/fields/RatingNew_Sections__c.field-meta.xml
<CustomField>
    <fullName>RatingNew_Sections__c</fullName>
    <label>RatingNew Sections</label>
    <length>255</length>
    <type>Text</type>
</CustomField>