default/objects/FieldSalesTerritory__c/fields/Scoring_sections__c.field-meta.xml
<CustomField>
    <fullName>Scoring_sections__c</fullName>
    <label>Scoring sections</label>
    <length>255</length>
    <type>Text</type>
</CustomField>