default/objects/FieldSalesTerritory__c/fields/Sort_Ascending__c.field-meta.xml
<CustomField>
    <fullName>Sort_Ascending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sort Ascending</label>
    <type>Checkbox</type>
</CustomField>